# stealth-message

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.ps1  install.sh
cli/: CLAUDE.md  README.md  pyproject.toml
cli/stealth_cli/: __main__.py  config.py  exceptions.py
cli/stealth_cli/crypto/: keys.py  messages.py
cli/stealth_cli/network/: client.py  server.py
cli/stealth_cli/ui/: chat.py  setup.py
cli/tests/: test_crypto.py  test_network.py
docs/: protocol.md
linux/: CLAUDE.md
macos/: CLAUDE.md  generate_dmg_bg.swift  make_dmg.sh
macos/StealthMessage/StealthMessage/: ContentView.swift  StealthMessage.entitlements  StealthMessageApp.swift
macos/StealthMessage/StealthMessage.xcodeproj/: project.pbxproj
macos/StealthMessage/StealthMessage.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
macos/StealthMessage/StealthMessage.xcodeproj/xcshareddata/xcschemes/: StealthMessage.xcscheme
macos/StealthMessage/StealthMessage.xcodeproj/xcuserdata/sirius.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/StealthMessage/StealthMessage/Assets.xcassets/AccentColor.colorset/: Contents.json
macos/StealthMessage/StealthMessage/Crypto/: CryptoError.swift  KeychainStore.swift  PGPKeyManager.swift
macos/StealthMessage/StealthMessage/Network/: Message.swift  StealthClient.swift  StealthServer.swift
macos/StealthMessage/StealthMessage/UI/: AppViewModel.swift  HostView.swift  HubView.swift  JoinView.swift  SetupView.swift  UnlockView.swift
macos/StealthMessage/StealthMessageTests/: CryptoTests.swift  NetworkTests.swift
windows/: CLAUDE.md  PLAN.md  StealthMessage.sln  StealthMessage.slnx
windows/StealthMessage/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  StealthMessage.csproj  app.manifest
windows/StealthMessage.Core/: StealthMessage.Core.csproj
windows/StealthMessage.Core/Crypto/: CryptoException.cs  KeyStore.cs  PgpManager.cs
windows/StealthMessage.Core/Network/: ProtocolException.cs  StealthClient.cs  StealthServer.cs  WireMessage.cs
windows/StealthMessage.Tests/: StealthMessage.Tests.csproj
windows/StealthMessage.Tests/Crypto/: KeyStoreTests.cs  PgpManagerTests.cs
windows/StealthMessage.Tests/Network/: WireMessageTests.cs
windows/StealthMessage/Converters/: Converters.cs
windows/StealthMessage/Properties/: launchSettings.json
windows/StealthMessage/ViewModels/: AppViewModel.cs  HostViewModel.cs  HubViewModel.cs  JoinViewModel.cs  RelayCommand.cs  SetupViewModel.cs  UnlockViewModel.cs
windows/StealthMessage/Views/: HostView.xaml  HostView.xaml.cs  HubView.xaml  HubView.xaml.cs  JoinView.xaml  JoinView.xaml.cs  SetupView.xaml  SetupView.xaml.cs  UnlockView.xaml  UnlockView.xaml.cs
