[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stealth-message-cli"
version = "0.1.0"
description = "Terminal client for stealth-message — end-to-end encrypted PGP chat"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pgpy>=0.6.0",
    "websockets>=12.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
stealth-cli = "stealth_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stealth_cli*"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py310"]
line-length = 88

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
