[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stealth-message-cli"
version = "0.1.1"
description = "Terminal client for stealth-message — end-to-end encrypted PGP chat"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
keywords = ["chat", "encryption", "pgp", "privacy", "end-to-end"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "pgpy>=0.6.0",
    "websockets>=12.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://syberiancode.com/stealth-message"
Repository = "https://github.com/syberiancode/stealth-message"
Issues = "https://github.com/syberiancode/stealth-message/issues"

[project.scripts]
stealth-cli = "stealth_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stealth_cli*"]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py310"]
line-length = 88

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
